--- a/scae/config/mnist.yaml
+++ b/scae/config/mnist.yaml
@@ -3,7 +3,10 @@ batch_size: 500
 num_epochs: 120
 
 model: pcae
-dataset: mnist
+dataset:
+  name: mnist
+  random_translate: False
+  random_rotate: False
 
 pcae:
   num_caps: 16
